--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,1 +1,37 @@
+name: Django Tests
 
+on:
+  push:
+    branches:
+      - main
+
+  pull_request:
+    branches: -main
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+      - name: Install dep
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Lint
+        run: |
+          pip install flake8
+          flake8
+      - name: Coverage
+        run: |
+          pip install coverage
+          coverage run manage.py test
+          coverage report
+      - name: Django test
+        run: |
+          python3 manage.py test
